--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -1,16 +1,34 @@
+
 server:
-  port: 0 # Random Port ??
+#  port: 0
+  port: 3000
 
 spring:
   application:
     name: user-service
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+      path: /h2-console
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
 
-eureka:
-  #Server? ???? ?? ??? ?? ??
-  instance:
-    instance-id: ${spring.cloud.client.hostname}:${spring.application.instance_id:${random.value}}
-  client:
-    register-with-eureka: true # ??? ??? ??
-    fetch-registry: true
-    service-url:
-      defaultZone: http://127.0.0.1:8761/eureka #MSA ??? ??
+
+#eureka:
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://127.0.0.1:8761/eureka
+#  instance:
+#    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+greeting:
+  message : Welcome to the Simple E-commerce
+
+
