--- a/ApiGatewayService/src/main/resources/application.yml
+++ b/ApiGatewayService/src/main/resources/application.yml
@@ -20,20 +20,32 @@ spring:
             preLogger: true
             postLogger: true
       routes:
-        - id : first-service
-          uri : lb://MY-FIRST-SERVICE
+        - id : user-service
+          uri : lb://USER-SERVICE
           predicates:
-            - Path=/first-service/**
+            - Path=/user-service/**
           filters:
             - CustomFilter
-        - id: second-service
-          uri : lb://MY-SECOND-SERVICE
+        - id: catalog-service
+          uri: lb://CATALOG-SERVICE
           predicates:
-            - Path=/second-service/**
+            - Path=/catalog-service/**
           filters:
-            - name: CustomFilter
-            - name: LoggingFilter
-              args:
-                baseMessage: Logging Filter 적용해!
-                preLogger: true
-                postLogger: true
+            - CustomFilter
+#        - id : first-service
+#          uri : lb://MY-FIRST-SERVICE
+#          predicates:
+#            - Path=/first-service/**
+#          filters:
+#            - CustomFilter
+#        - id: second-service
+#          uri : lb://MY-SECOND-SERVICE
+#          predicates:
+#            - Path=/second-service/**
+#          filters:
+#            - name: CustomFilter
+#            - name: LoggingFilter
+#              args:
+#                baseMessage: Logging Filter 적용해!
+#                preLogger: true
+#                postLogger: true
