--- a/ApiGatewayService/src/main/resources/application.yml
+++ b/ApiGatewayService/src/main/resources/application.yml
@@ -8,6 +8,10 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka
 
+token:
+  expiration_time: 86400000 #1일
+  secret: mySecretSecc123
+
 spring:
   application:
     name: apigateway-service
@@ -20,12 +24,41 @@ spring:
             preLogger: true
             postLogger: true
       routes:
+#        - id : user-service
+#          uri : lb://USER-SERVICE
+#          predicates:
+#            - Path=/user-service/**
+#          filters:
+#            - CustomFilter
+          # 로그인
         - id : user-service
           uri : lb://USER-SERVICE
           predicates:
-            - Path=/user-service/**
+            - Path=/user-service/login
+            - Method=POST
           filters:
-            - CustomFilter
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/user-service/(?<segment>.*), /$\{segment}  #user-service를 빼고 뒤쪽의 URL 패턴으로 재정의
+          # 회원 가입
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/users
+            - Method=POST
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+          # 나머지 User-service
+        - id: user-service
+          uri: lb://USER-SERVICE
+          predicates:
+            - Path=/user-service/**
+            - Method=GET
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+            - AuthorizationHeaderFilter
+
         - id: catalog-service
           uri: lb://CATALOG-SERVICE
           predicates:
