--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -28,7 +28,13 @@ eureka:
   instance:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
+token:
+  expiration_time: 86400000 #1일
+  secret: mySecretSecc123
+
 greeting:
   message : Welcome to the Simple E-commerce
 
-
+logging:
+  level:
+    com.example.userservice: debug
