--- a/ecommerce-dev.yml
+++ b/ecommerce-dev.yml
@@ -1,6 +1,6 @@
 token:
   expiration_time: 86400000 #1일
-  secret: mySecretSecc123_dev
+  secret: mySecretSecc123_dev22
 
 gateway:
   ip: 172.30.1.29
