--- a/ApiGatewayService/src/main/resources/bootstrap.yml
+++ b/ApiGatewayService/src/main/resources/bootstrap.yml
@@ -2,6 +2,6 @@ spring:
   cloud:
     config:
       uri: http://127.0.0.1:8887
-      name: ecommerce
+      name: user-service
   profiles:
     active: dev
