--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -17,11 +17,12 @@ spring:
       settings:
         web-allow-others: true
       path: /h2-console
-  datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+# 암호화하여 보관
+#  datasource:
+#    url: jdbc:h2:mem:testdb
+#    username: sa
+#    password: 1234
+#    driver-class-name: org.h2.Driver
 
 
 eureka:
@@ -48,4 +49,4 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, health, beans, busrefresh
+        include: refresh, health, beans
