week 3 : section 10 MSA communication with REST template and Feign Client

--- a/ApiGatewayService/src/main/resources/application.yml
+++ b/ApiGatewayService/src/main/resources/application.yml
@@ -81,14 +81,14 @@ spring:
             - Path=/catalog-service/**
           filters:
             - CustomFilter
-            - AuthorizationHeaderFilter
+#            - AuthorizationHeaderFilter
         - id: order-service
           uri: lb://ORDER-SERVICE
           predicates:
             - Path=/order-service/**
           filters:
             - CustomFilter
-            - AuthorizationHeaderFilter
+#            - AuthorizationHeaderFilter
 
 #        - id : first-service
 #          uri : lb://MY-FIRST-SERVICE
